--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -8,15 +8,31 @@ $blue: #6473F4;
 $white: #FFF;
 
 * {
-    box-sizing: border-box;
-    color: $white;
     font-family: 'IBM Plex Mono', monospace;
+    color: $white;
+    box-sizing: border-box;    
 }
 
 html {
     scroll-behavior: smooth;
     position: relative;
     background: $dark-grey;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: transparent; 
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgba($white, .3);
+
+        &:hover {
+            background: rgba($white, .1); 
+        }
+    }
 }
 
 body {
@@ -34,87 +50,31 @@ a {
     text-decoration: none;
 }
 
+section {
+    padding: 200px 0;
+}
+
 .container {
     width: 100%;
     max-width: 1140px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 
-.navbar {
-    background-color: transparent;
-    padding: 30px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-
-    .logo {
-        font-size: 28px;
-        position: relative;
-        opacity: .8;
-        transition: 0.3s;
-
-        &:hover {
-            opacity: 1;
-        }
-
-        b {
-            font-weight: 600;
-        }
-
-        &::before {
-            content: '<';
-            color: $blue;
-            font-weight: 600;
-        }
-
-        &::after {
-            content: '/>';
-            color: $blue;
-            font-weight: 600;
-        }     
-    }
+.sec-title {
+    font-size: 42px;
+    text-transform: uppercase;
+    font-weight: 500;
+    position: relative;
+    margin: 0 0 30px;
     
-    .menu {
-        
-        li {
-            display: inline-block;
-
-            a {
-                display: block;
-                font-size: 16px;
-                font-weight: 300;
-                transition: 0.3s;
-                text-transform: uppercase;
-                color: #EEE;
-
-                &::before {
-                    content: '<';
-                    color: $blue;
-                    opacity: 0;
-                    transition: 0.3s;
-                }
-
-                &::after {
-                    content: '/>';
-                    color: $blue;
-                    opacity: 0;
-                    transition: 0.3s;
-                }
-
-                &:hover {
-                    color: $blue;
-                    transition: 0.3s;
-
-                    &::after, &::before {
-                        opacity: 1;
-                        transition: 0.3s;
-                    }
-                }
-            }
-        }
+    &::before {
+        content: '';
+        background-color: $blue;
+        width: 50px;
+        height: 5px;
+        position: absolute;
+        top: -10px;
+        left: 0;
     }
 }
