--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -7,6 +7,11 @@ $dark-grey-alt: #25262D;
 $blue: #6473F4;
 $white: #FFF;
 
+@custom-media --xs (max-width: 576px);
+@custom-media --sm (max-width: 767px);
+@custom-media --md (max-width: 1024px);
+@custom-media --lg (max-width: 1200px);
+
 * {
     font-family: 'IBM Plex Mono', monospace;
     color: $white;
@@ -17,6 +22,7 @@ html {
     scroll-behavior: smooth;
     position: relative;
     background: $dark-grey;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
     &::-webkit-scrollbar {
         width: 10px;
