--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -6,11 +6,17 @@
     left: 0;
     width: 100%;
     box-shadow: 1px 1px 10px $dark-grey-alt;
+    z-index: 999;
 
     .container {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: relative;
+
+        @media (--sm) {
+            display: block;
+        }
     }
 
     .logo {
@@ -18,6 +24,10 @@
         position: relative;
         opacity: .8;
         transition: 0.3s;
+
+        @media (--sm) {
+            font-size: 24px;
+        }
 
         &:hover {
             opacity: 1;
@@ -33,17 +43,52 @@
             font-weight: 600;
         }   
     }
+
+    .hamburger {
+        position: absolute;
+        right: 20px;
+        top: 5px;
+        display: none;
+        padding: 0;
+
+        @media (--sm) {
+            display: inline-block;
+        }
+         
+    }
     
     .menu {
         display: flex;
+
+        @media (--sm) {
+            display: block;
+            margin: 0;
+            max-height: 0;
+            overflow: hidden;
+            transition: 0.3s;
+            
+            &.is-active {
+                max-height: 100%;
+                transition: 0.3s;
+            }
+        }
         
         li {
-            display: inline-block;
+            display: block;
             position: relative;
-            margin-right: 30px;
+            margin: 0 30px 0 0;
+
+            @media (--sm) {
+                margin: 0;
+
+                &:first-child {
+                    margin: 15px 0 0;
+                }
+                    
+            }
 
             &:last-child {
-                margin-right: 0;
+                margin: 0;
             }
                 
             a {
@@ -53,6 +98,11 @@
                 text-transform: uppercase;
                 color: rgba($white, .8);
                 transition: 0.3s;
+
+                @media (--sm) {
+                    padding: 10px;
+                    border-radius: 4px;
+                }
 
                 &::after {
                     content: '';
@@ -65,11 +115,19 @@
                     opacity: 0;
                     transition: 0.3s;
 
+                    @media (--sm) {
+                        display: none;
+                    }
+
                 }
 
                 &:hover, &.active {
                     color: rgba($white, 1);
                     transition: 0.3s;
+
+                    @media (--sm) {
+                        background-color: $blue;
+                    }
 
                     &::after {
                         opacity: 1;
@@ -85,7 +143,6 @@
     background: $dark-grey;
     width: 100%;
     
-
     .container {
         display: flex;
         justify-content: center;
@@ -113,6 +170,10 @@
             //text-transform: uppercase;
             font-weight: 600;
             font-style: italic;
+
+            @media (--sm) {
+                font-size: 54px;
+            }
         }
 
         .intro {
