--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
+@import '_fa.css';
 @import '_normalize.css';
 @import '_boilerplate.css';
-@import '_fa.css';
+@import '_hamburgers.css';
 @import '_base.css';
 @import '_layout.css';
