--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -14,7 +14,7 @@
         justify-content: space-between;
         position: relative;
 
-        @media (--sm) {
+        @media (--xs) {
             display: block;
         }
     }
@@ -25,7 +25,7 @@
         opacity: .8;
         transition: 0.3s;
 
-        @media (--sm) {
+        @media (--xs) {
             font-size: 24px;
         }
 
@@ -51,7 +51,7 @@
         display: none;
         padding: 0;
 
-        @media (--sm) {
+        @media (--xs) {
             display: inline-block;
         }
          
@@ -60,16 +60,16 @@
     .menu {
         display: flex;
 
-        @media (--sm) {
+        @media (--xs) {
             display: block;
             margin: 0;
             max-height: 0;
             overflow: hidden;
-            transition: 0.3s;
+            transition: 0.5s;
             
             &.is-active {
-                max-height: 100%;
-                transition: 0.3s;
+                max-height: 100vh;
+                transition: 0.5s;
             }
         }
         
@@ -78,7 +78,7 @@
             position: relative;
             margin: 0 30px 0 0;
 
-            @media (--sm) {
+            @media (--xs) {
                 margin: 0;
 
                 &:first-child {
@@ -99,7 +99,7 @@
                 color: rgba($white, .8);
                 transition: 0.3s;
 
-                @media (--sm) {
+                @media (--xs) {
                     padding: 10px;
                     border-radius: 4px;
                 }
@@ -115,7 +115,7 @@
                     opacity: 0;
                     transition: 0.3s;
 
-                    @media (--sm) {
+                    @media (--xs) {
                         display: none;
                     }
 
@@ -125,7 +125,7 @@
                     color: rgba($white, 1);
                     transition: 0.3s;
 
-                    @media (--sm) {
+                    @media (--xs) {
                         background-color: $blue;
                     }
 
@@ -171,7 +171,7 @@
             font-weight: 600;
             font-style: italic;
 
-            @media (--sm) {
+            @media (--xs) {
                 font-size: 54px;
             }
         }
@@ -208,14 +208,21 @@
 
     .container {
         display: flex;
+        flex-wrap: wrap;
+
+        @media (--md) {
+            flex-direction: column-reverse;
+        }
 
         .esq, .dir {
-            
             width: 50%;
+
+            @media (--md) {
+                width: 100%;
+            }
         }
         
         .esq {
-           
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
@@ -246,11 +253,14 @@
             }
 
             .social {
+                display: flex;
+                justify-content: space-around;
+                width: 100%;
+                max-width: 375px;
                 margin-top: 20px;
 
                 li {
                     display: inline-block;
-                    margin: 0 15px;
 
                     a {
                         display: block;
@@ -269,6 +279,10 @@
             .intro {
                 font-style: italic;
                 opacity: .8;
+
+                @media (--xs) {
+                    text-align: center;
+                }
             }
         }
     }
