--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -107,7 +107,7 @@
                 &::after {
                     content: '';
                     background-color: $blue;
-                    width: 100%;
+                    width: 50%;
                     height: 2px;
                     position: absolute;
                     bottom: -5px;
@@ -421,7 +421,9 @@
     background-color: $dark-grey-alt;
 }
 
-
+.sec-timeline {
+    background-color: $dark-grey;
+}
 
 
 
@@ -445,10 +447,72 @@
     }
     
     .esq {
-        
+        padding: 0 80px 0 0;
+
+        @media (--sm) {
+            padding: 0;
+            margin: 80px 0 0;
+        }
+
+       .social {
+
+           li {
+               width: 100%;
+               margin: 0 0 20px;
+
+               a {
+                   display: flex;
+                   align-items: center;
+                   justify-content: flex-start;
+                   padding: 30px 40px;
+                   background-color: $dark-grey;
+                   border-radius: 8px;
+                   transition: 0.3s;
+                   
+                    &:hover {
+                        box-shadow: 5px 5px 20px #1F1F1F;
+
+                        .title {
+                            opacity: 1;
+                        }
+                        
+                        i {
+                            opacity: .4;
+                        }
+                    }
+
+                   .wrapper {
+                       margin-left: 30px;
+                       font-style: italic;
+                    }
+
+                    i {
+                        opacity: .8;
+                        transition: 0.3s;
+                    }
+
+                   .title {
+                       margin: 0;
+                       opacity: .8;
+                       transition: 0.3s;
+                    }
+
+                    .intro {
+                        margin: 0;
+                        opacity: .4;
+                    }
+                }
+            }
+        } 
     }
 
     .dir {
+
+        .intro {
+            margin: 0 0 30px;
+            opacity: .8;
+            font-style: italic;
+        }
 
         input, textarea {
             width: 100%;
@@ -495,7 +559,7 @@
             }
         }
 
-        p {
+        #my-form-status {
             font-style: italic;
             padding: 10px 20px;
             background-color: rgba($black, .2);
@@ -512,5 +576,10 @@
 
 .footer {
     text-align: center;
-    border-bottom: 2px solid $blue;
+    border-bottom: 5px solid $blue;
+
+    .intro {
+        margin: 0;
+        padding: 20px 0;
+    }
 }
