feat: adiciona o inicio da construção do portfolio

--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -34,6 +34,13 @@ $black: #000;
     }
 }
 
+%lineclamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
 * {
     font-family: 'IBM Plex Mono', monospace;
     color: $white;
