--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -16,6 +16,24 @@ $black: #000;
 @custom-media --md (max-width: 1024px);
 @custom-media --lg (max-width: 1200px);
 
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    #js-year {
+        &::after {
+            content: '2021';
+        }
+    }
+    
+    #js-age {
+        &::after {
+            content: '24';
+        }
+    }
+    
+    html {
+        overflow-x: hidden;
+    }
+}
+
 %scrollbar {
     &::-webkit-scrollbar {
         width: 10px;
