--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -483,6 +483,11 @@
             width: 100%;
         }
 
+        &:last-child {
+            margin-right: auto;
+            margin-left: 2.5%;
+        }
+            
         &:hover {
             background-color: rgba(0, 0, 0, .2);
 
