--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -554,6 +554,12 @@
                 color: rgba($white, 1);
             }
         }
+        
+        a[href="#"], a[href=""], {
+            background-color: rgba(0, 0, 0, .1);
+            color: rgba($white, .4);
+            pointer-events: none;            
+        }
 
     }
 }
