feat: adiciona projetos ao portfólio e corrige line-clamp

--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -52,9 +52,16 @@ $black: #000;
     }
 }
 
-%lineclamp {
+%lineclamp1 {
   display: -webkit-box;
   -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
+%lineclamp2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;  
   overflow: hidden;
 }
