chore: corrige keywords, adiciona border-radius na TL

--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -599,6 +599,7 @@
         padding: 30px;
         margin: 20px 0 20px 40px;
         position: relative;
+        border-radius: 4px;
         transition: 0.3s;
 
         @media (--sm) {
