--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -136,6 +136,29 @@
             }
         }
     }
+
+    .lang {
+        position: absolute;
+        right: 20px;
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        height: 100%;
+
+        &__bt {
+            background-color: transparent;
+            border: 0;
+            width: 50px;
+            height: 34px;
+            cursor: pointer;
+
+            svg {
+                max-width: 100%;
+                max-height: 100%;
+            }
+        }
+    }
 }
     
 .sec-header {
@@ -297,6 +320,11 @@
             .intro {
                 font-style: italic;
                 opacity: .8;
+                margin: 0 0 20px;
+
+                &:last-child {
+                    margin: 0;
+                }
 
                 @media (--xs) {
                     text-align: center;
