chore: corrige bugs e finaliza migração de estrutura.

--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -1,3 +1,6 @@
+@import '_fa.scss';
+@import '_normalize.scss';
 @import '_boilerplate.scss';
+@import '_hamburgers.scss';
 @import '_base.scss';
 @import '_layout.scss';
