--- a/app/src/scss/_base.scss
+++ b/app/src/scss/_base.scss
@@ -1,9 +1,185 @@
-@custom-media --ph (width > 400px);
-@custom-media --phWide (width > 480px);
-@custom-media --phTab (width > 560px);
-@custom-media --tabSm (width > 640px);
-@custom-media --tab (width > 768px);
-@custom-media --tabWide (width > 1024px);
-@custom-media --deskMini (width > 992px);
-@custom-media --desk (width > 1248px);
-@custom-media --deskWide (width > 1440px);
+@charset "utf-8";
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap'); 
+    
+$dark-grey: #2D2E32;
+$dark-grey-alt: #25262D;
+$blue: #6473F4;
+$white: #FFF;
+$red: #FF4F4F;
+$green: #64F4AC;
+$yellow: #F7D387;
+$black: #000;
+
+@custom-media --xs (max-width: 767px);
+@custom-media --sm (max-width: 992px);
+@custom-media --md (max-width: 1024px);
+@custom-media --lg (max-width: 1200px);
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {    
+    html {
+        overflow-x: hidden;
+    }
+}
+
+%scrollbar {
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: transparent; 
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgba($white, .3);
+
+        &:hover {
+            background: rgba($white, .1); 
+        }
+    }
+}
+
+%lineclamp1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
+%lineclamp2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
+* {
+    font-family: 'IBM Plex Mono', monospace;
+    color: $white;
+    box-sizing: border-box;    
+    
+}
+
+html {
+    scroll-behavior: smooth;
+    position: relative;
+    background: $dark-grey;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+    @extend %scrollbar;
+}
+
+body {
+    margin: 0;
+    padding: 0;    
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+section {
+    padding: 200px 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.sec-title {
+    font-size: 42px;
+    text-transform: uppercase;
+    font-weight: 500;
+    position: relative;
+    margin: 0 0 30px;
+    opacity: .8;
+    transition: 0.3s;
+
+    &:hover {
+        opacity: 1;
+    }
+
+    @media (--xs) {
+        text-align: center;
+        font-size: 36px;
+    }
+    
+    &::before {
+        content: '';
+        background-color: $blue;
+        width: 50px;
+        height: 5px;
+        position: absolute;
+        top: -5px;
+        left: 5px;
+        transform: skewX(-60deg);
+
+        @media (--xs) {
+            margin: 0 auto;
+            left: 0;
+            right: 0;
+            bottom: -10px;
+            top: inherit;
+            transform: none;
+            width: 80px;
+            height: 2px;
+        }
+    }
+}
+
+.scroll-to-top {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    padding: 10px;
+    background-color: rgba($black, .3);
+    z-index: 999;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s;
+
+    i {
+        color: rgba($white, .8);
+    }
+    
+    &:hover {
+        background-color: rgba($black, .5);
+
+        i {
+            color: rgba($white, 1);
+        }
+    }
+    
+    &.show {
+        display: block;
+        visibility: visible;
+        opacity: 1;
+        transition: 0.3s;
+    }
+}
+
+.only-desktop {
+    display: block !important;
+
+    @media (--xs) {
+        display: none !important;
+    }
+}
+
+.only-mobile {
+    display: none !important;
+    
+    @media (--xs) {
+        display: block !important;
+    }
+}
