fix: corrige bg da seção 'sec-sobre'.

--- a/docs/src/scss/_layout.scss
+++ b/docs/src/scss/_layout.scss
@@ -214,7 +214,7 @@
 }
 
 .sec-sobre {
-    background-color: $dark-grey-alt;
+    background-color: rgb($dark-grey-alt);
 
     .container {
         display: flex;
